# Flesh-and-bone

./: .gitignore  Package.md  Package.swift  README.md  pyproject.md  pyproject.toml
experiments/: H0.md  H1.md  H2.md  H3.md  H4.md  H5.md  H5D.md  H5U.md  H6C.md  H6K.md  H6M.md  H7.md  H7B.md  H7C.md  H7D.md  H8.md  KIMODO_REVIEW.md  README.md  RUNTIME_LAB.md
model/: README.md
runtime/: Info.plist  README.md
scripts/: check_h5d.md  check_h5d.py  check_h5u.md  check_h5u.py  export_flesh_runtime.md  export_flesh_runtime.py  extract_h4_asset.md  extract_h4_asset.py  make_flesh_app.md  make_flesh_app.sh  prepare_kimodo_motion.md  prepare_kimodo_motion.py  render_h6_comparison.md  render_h6_comparison.py  render_h7_comparison.md  render_h7_comparison.py  render_h8_comparison.md  render_h8_comparison.py  render_splat_sweep.md  render_splat_sweep.py  run_h1.md  run_h1.py  run_h2.md  run_h2.py  run_h3.md  run_h3.py  run_h4.md  run_h4.py  run_h5.md  run_h5.py  run_h6c.md  run_h6c.py  run_h6k.md  run_h6k.py  run_h6m.md  run_h6m.py  run_h7.md  run_h7.py  run_h7d.md  run_h7d.py  (+6 more)
tests/: test_constitutive_rule.md  test_constitutive_rule.py  test_contracts.md  test_contracts.py  test_density_rule.md  test_density_rule.py  test_density_teacher.md  test_density_teacher.py  test_flesh_rollout.md  test_flesh_rollout.py  test_flesh_rule.md  test_flesh_rule.py  test_flesh_teacher.md  test_flesh_teacher.py  test_h2.md  test_h2.py  test_h3.md  test_h3.py  test_h4_metrics.md  test_h4_metrics.py  test_h4_volume.md  test_h4_volume.py  test_h5_experiment.md  test_h5_experiment.py  (+30 more)
(+142 files in other folders)
