[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "flesh-and-bone"
version = "0.1.0"
description = "Particle neural cellular automata around articulated skeletons"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "pillow>=11.0",
  "scipy>=1.14",
  "torch>=2.5",
  "trimesh>=4.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
